--- a/BolsaDeTrabajo/BolsaDeTrabajo/BolsaDeTrabajo.csproj
+++ b/BolsaDeTrabajo/BolsaDeTrabajo/BolsaDeTrabajo.csproj
@@ -9,7 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="Vistas\Registro.xaml">
+    <EmbeddedResource Update="Vistas\ViewRegistro.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Vistas\ViewTrabajo.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
