--- a/BolsaDeTrabajo/BolsaDeTrabajo/BolsaDeTrabajo.csproj
+++ b/BolsaDeTrabajo/BolsaDeTrabajo/BolsaDeTrabajo.csproj
@@ -9,6 +9,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\BolsaTrabajo.BIZ\BolsaTrabajo.BIZ.csproj" />
+    <ProjectReference Include="..\..\BolsaTrabajo.COMMON\BolsaTrabajo.COMMON.csproj" />
+    <ProjectReference Include="..\..\BolsaTrabajo.DAL\BolsaTrabajo.DAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Update="Vistas\ViewRegistro.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
